--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,6 +23,27 @@
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) -->
 <!--suppress LongLine -->
 <resources>
+    <plurals name="displaying_n_books">
+        <item quantity="one">Книг на полке: %1$d</item>
+        <item quantity="few">Книг на полке: %1$d</item>
+        <item quantity="many">Книг на полке: %1$d</item>
+        <item quantity="other">Книг на полке: %1$d</item>
+    </plurals>
+
+    <plurals name="n_books_found">
+        <item quantity="one">%1$d книга найдена</item>
+        <item quantity="few">%1$d книги найдено</item>
+        <item quantity="many">%1$d книги найдено</item>
+        <item quantity="other">%1$d книги найдено</item>
+    </plurals>
+
+    <plurals name="n_stars">
+        <item quantity="one">%1$s звезда</item>
+        <item quantity="few">%1$s звезд</item>
+        <item quantity="many">%1$s звезд</item>
+        <item quantity="other">%1$s звезд</item>
+    </plurals>
+
     <string name="X_acra_resToastText">&APP_NAME;" завершилось с ошибкой. Пожалуйста, помогите нам сделать приложение лучше, отправив эту ошибку."</string>
     <string name="X_action_clear_credentials">Очистить учетные данные</string>
     <string name="X_action_execute">"Выполнить"</string>
