--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -23,6 +23,21 @@
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») -->
 <!--suppress LongLine -->
 <resources>
+    <plurals name="displaying_n_books">
+        <item quantity="one">%1$d Buch angezeigt</item>
+        <item quantity="other">%1$d Bücher werden angezeigt</item>
+    </plurals>
+
+    <plurals name="n_books_found">
+        <item quantity="one">%1$d Buch gefunden</item>
+        <item quantity="other">%1$d Bücher gefunden</item>
+    </plurals>
+
+    <plurals name="n_stars">
+        <item quantity="one">%1$s Stern</item>
+        <item quantity="other">%1$s Sterne</item>
+    </plurals>
+
     <string name="X_acra_resToastText">&APP_NAME; ist abgestürzt. Bitte helfen Sie uns bei der Verbesserung der App, indem Sie diesen Absturz melden.</string>
     <string name="X_action_clear_credentials">Anmeldedaten löschen</string>
     <string name="X_action_execute">Ausführen</string>
