--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -23,6 +23,21 @@
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») -->
 <!--suppress LongLine -->
 <resources>
+    <plurals name="displaying_n_books">
+        <item quantity="one">%1$d boek op deze plank</item>
+        <item quantity="other">%1$d boeken op deze plank</item>
+    </plurals>
+
+    <plurals name="n_books_found">
+        <item quantity="one">%1$d boek gevonden</item>
+        <item quantity="other">%1$d boeken gevonden</item>
+    </plurals>
+
+    <plurals name="n_stars">
+        <item quantity="one">%1$s ster</item>
+        <item quantity="other">%1$s sterren</item>
+    </plurals>
+
     <string name="X_acra_resToastText">&APP_NAME; is onverwacht gecrasht. Help ons aub de toepassing beter te maken door deze crash te melden.</string>
     <string name="X_action_clear_credentials">Certificaatgegevens wissen</string>
     <string name="X_action_execute">Uitvoeren</string>
